# aequitas-backend

./: .dockerignore  .env  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  pyproject.toml  release.config.js  release.config.mjs  requirements.txt  setup-db.sh
.github/workflows/: build.yml  release.yml
application/automation/: parsing.py  setup.py
application/automation/scripts/: __init__.py  on_dataset_created.py  on_dataset_features_available.py  on_detected_created.py  on_polarization_requested.py  on_processing_requested.py  on_question_answered.py  on_questions_answered.py
application/events/: __init__.py  events_service.py
application/graph/: graph_question_service.py
application/logics/: consumers.py
application/logics/scripts/: script_dataset_stats.py  script_features_created.py
application/project/: __init__.py  project_service.py  questionnaire_service.py  report.py
docs/asyncapi/: specification.yml
docs/openapi/: specification.yml
docs/uml/: Architecture.puml  Graph.puml
domain/common/core/: __init__.py  answer.py  entity_id.py  question.py
domain/common/factories/: answer_factory.py
domain/graph/core/: graph_question.py
domain/graph/factories/: graph_question_factory.py
domain/graph/repositories/: graph_question_repository.py
domain/project/core/: __init__.py  project.py  project_answer.py  project_question.py
domain/project/core/selection/: multiple_selection_strategy.py  selection_strategy.py  single_selection_strategy.py
domain/project/factories/: project_answer_factory.py  project_factory.py  project_question_factory.py
domain/project/repositories/: project_repository.py  questionnaire_repository.py
infrastructure/events/: Producer.py  __init__.py  consumer.py  kafka_events_service.py  kafka_options.py  producer.py
infrastructure/storage/: __init__.py
infrastructure/storage/graph/repositories/: neo4j_graph_question_repository.py
infrastructure/storage/project/repositories/: neo4j_project_repository.py  neo4j_questionnaire_repository.py
infrastructure/ws/: main.py  setup.py
infrastructure/ws/resources/: __init__.py  projects.py  questionnaires.py  questions.py
infrastructure/ws/utils/: __init__.py  logger.py
resources/: __init__.py  full-questionnaire-example.json  questions-fairness-graph.yml
resources/adecco/: __init__.py  adecco_predict_0.csv  adecco_predict_1.csv  adecco_predict_2.csv  adecco_predict_pol_0.csv  adecco_predict_pol_1.csv  adecco_predict_pol_2.csv  advdeb_adecco_results_repair_0.csv  advdeb_adecco_results_repair_1.csv  advdeb_adecco_results_repair_2.csv
resources/adult/: __init__.py  detected.json  fauci_results-alpha-1.csv  fauci_results.csv  features.json  inprocessing.json  metrics.json  preprocessing.json
resources/akkodis/: __init__.py  advdeb_akkodis_results_repair.csv  advdeb_akkodis_results_repair_0.csv  advdeb_akkodis_results_repair_1.csv  akkodis_final.csv  akkodis_predict.csv  akkodis_predict_0.csv  akkodis_predict_1.csv  metrics_baseline_original.json  metrics_baseline_pol1.json  metrics_baseline_pol2.json  metrics_baseline_pol3.json  metrics_fauci_original.json  metrics_fauci_pol1.json  metrics_fauci_pol2.json  metrics_fauci_pol3.json  results_baseline_1.csv  results_baseline_2.csv  results_baseline_3.csv  results_baseline_int.csv  results_baseline_int_2.csv  results_fauci_1.csv  results_fauci_2.csv  results_fauci_3.csv
resources/db/: __init__.py  __main__.py  datasets.json  init.cypher
resources/db/context/: __init__.py  algorithms__preprocessing.yml  inprocessing-hyperparameters.yml  postprocessing-hyperparameters.yml  preprocessing-hyperparameters.yml
resources/db/cypher/: __init__.py  __main__.py  project-p1.cypher
resources/db/datasets/: __init__.py  adecco.csv  akkodis.csv  compas.csv  fauci_predictions.csv  preprocessed_lfr_result_ull.csv  skin_disease.csv  test-adecco.csv  ull.csv
resources/db/stats/: __init__.py  adult_stats.csv  compas_stats.csv  credit_stats.csv
resources/skin_deseases/: __init__.py  results_eor_augbalanced.csv  results_eor_augmin.csv  results_eor_augmin_pol2.csv  results_eor_none.csv
resources/ull/: __init__.py  ull_baseline_original_metrics.json  ull_baseline_pol1_metrics.json  ull_baseline_pol2_metrics.json  ull_best_original_metrics.json  ull_best_pol1_metrics.json  ull_best_pol2_metrics.json  ull_dataset_original_metrics.json  ull_dataset_pol1_metrics.json  ull_dataset_pol2_metrics.json  ull_pol1.csv  ull_pol2.csv  ull_pred_baseline_original.csv  ull_pred_baseline_pol1.csv  ull_pred_baseline_pol2.csv  ull_pred_best_original.csv  ull_pred_best_pol1.csv  ull_pred_best_pol2.csv  ull_res_baseline_pol1.csv  ull_res_baseline_pol2.csv  ull_res_best_pol1.csv  ull_res_best_pol2.csv
test/: __init__.py
test/integration/: __init__.py
test/integration/graph/: test_TestGraphQuestionsAPI.py  test_graph_questions_api.py
test/integration/project/: __init__.py  test_TestProjectsAPI.py  test_TestQuestionnairesAPI.py  test_automation.py  test_context_api.py  test_project_api.py  test_questionnaire_api.py
test/resources/: __init__.py  docker-compose.yml.template  question-graph-example.yml  questions-flow.yml  questions-load-example.yml
test/resources/adult/: __init__.py  fauci_predictions_test.csv  fauci_results-alpha-0.csv  fauci_results.csv  features.json  inprocessing-no-mitigation.csv  inprocessing.json  metrics.json  preprocessing.json  proxies.json  proxies.readme  stats.csv  suggested-proxies.json
test/unit/automation/: test_automation_scripts_functionalities.py  test_dataframe_stuff.py
test/unit/domain/: test_TestProjectContext.py  test_TestProjectQuestionMultipleChoice.py  test_TestProjectQuestionSingleChoice.py
test/unit/presentation/: test_TestAnswerPresentation.py  test_TestGraphQuestionPresentation.py  test_TestProjectPresentation.py  test_TestProjectQuestionPresentation.py
utils/: encodings.py  env.py  errors.py  logs.py  neo4j_driver.py  status_code.py
ws/: setup.py
ws/resources/: questionnaires.py
